fix: protect KillProcessByPidHandle from its own CTRL_BREAK_EVENT via SetConsoleCtrlHandler
Without SetConsoleCtrlHandler, AttachConsole(pid) + GenerateConsoleCtrlEvent
would also kill our own process because we share the target's console after
attaching. Register an ignore handler that always returns TRUE to protect
ourselves from the signal.

Also add --enable-native-access=ALL-UNNAMED to suppress FFM restricted API
warnings that became errors in newer Java versions.